--- a/package.json
+++ b/package.json
@@ -23,23 +23,21 @@
     "dev:static-startup": "npx --yes tsx examples/static-startup.ts",
     "dev:static-all": "npx --yes tsx examples/static-all.ts"
   },
-  "peerDependencies": {
+  "peerDependencies": {},
+  "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "fastify": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@fastify/cors": "^10.0.1",
-    "@modelcontextprotocol/sdk": "^1.0.0",
     "@types/connect": "^3.4.38",
     "@types/node": "^20.11.5",
     "@vitest/coverage-v8": "^3.2.4",
-    "fastify": "^5.0.0",
     "tsx": "^4.19.0",
     "typescript": "^5.3.3",
     "vite": "^5.3.1",
-    "vitest": "^3.2.4",
-    "zod": "^3.22.4"
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=20.0.0"
