--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dev:basic": "npx --yes tsx examples/basic.ts",
     "dev:static-startup": "npx --yes tsx examples/static-startup.ts",
     "dev:static-all": "npx --yes tsx examples/static-all.ts",
-    "dev:server-demo": "npx --yes tsx tests/e2e-local/server-demo.ts"
+    "dev:server-demo": "npx --yes tsx tests/smoke-e2e/server-demo.ts",
+    "dev:client-demo": "npx --yes tsx tests/smoke-e2e/client-demo.ts"
   },
   "peerDependencies": {},
   "dependencies": {
