--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Ensure tag is on main
+      - name: Ensure tag is on default branch
         run: |
-          DEFAULT_BRANCH=main
+          DEFAULT_BRANCH="${{ github.event.repository.default_branch }}"
+          if [ -z "$DEFAULT_BRANCH" ]; then
+            DEFAULT_BRANCH=$(git remote show origin | sed -n '/HEAD branch/s/.*: //p')
+          fi
           TAG_REF="${GITHUB_REF#refs/tags/}"
           TAG_SHA=$(git rev-list -n 1 "$TAG_REF")
-          git fetch origin "$DEFAULT_BRANCH":"refs/remotes/origin/$DEFAULT_BRANCH" --depth=1
-          MAIN_SHA=$(git rev-parse "origin/$DEFAULT_BRANCH")
+          git fetch origin "$DEFAULT_BRANCH":"refs/remotes/origin/$DEFAULT_BRANCH"
+          MAIN_SHA=$(git rev-parse "refs/remotes/origin/$DEFAULT_BRANCH")
           if [ "$TAG_SHA" != "$MAIN_SHA" ]; then
             echo "Tag $TAG_REF must point to latest $DEFAULT_BRANCH ($MAIN_SHA), but points to $TAG_SHA" >&2
             exit 1
