--- a/package.json
+++ b/package.json
@@ -64,5 +64,12 @@
     "ai",
     "llm",
     "agents"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/code-rabi/toolception.git"
+  },
+  "bugs": {
+    "url": "https://github.com/code-rabi/toolception/issues"
+  }
 }
