--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toolception",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "private": false,
   "type": "module",
   "main": "dist/index.js",
@@ -22,7 +22,6 @@
     "dev:client-demo": "tsx tests/smoke-e2e/client-demo.ts",
     "prepublishOnly": "npm run typecheck && npm run build && npm run test:run"
   },
-  "peerDependencies": {},
   "dependencies": {
     "@fastify/cors": "^10.0.1",
     "@modelcontextprotocol/sdk": "^1.0.0",
@@ -36,6 +35,7 @@
     "tsx": "^4.19.0",
     "typescript": "^5.3.3",
     "vite": "^5.3.1",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   },
   "engines": {
