refactor: export new api from server

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toolception",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "private": false,
   "type": "module",
   "main": "dist/index.js",
@@ -58,6 +58,11 @@
     "dynamic-tools",
     "toolset",
     "tool-management",
+    "permissions",
+    "authentication",
+    "access-control",
+    "security",
+    "authorization",
     "json-rpc",
     "fastify",
     "zod",
