chore: update audit to critical

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm ci
 
       - name: Security audit
-        run: npm audit
+        run: npm audit --audit-level=critical
 
       - name: Typecheck
         run: npm run typecheck
